--- a/tapsaff_style.css
+++ b/tapsaff_style.css
@@ -1,3 +1,37 @@
+* {
+  box-sizing: border-box;
+}
+
+.wrapper {
+  position: relative;
+  height: 100vh;
+  width: 100%;
+  background: #020024;
+  background: linear-gradient(344deg, rgba(2, 0, 36, 0) 0%, #0090ff 38%, #0090ff 100%);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.wrapper .content-box {
+  height: 500px;
+  width: 500px;
+  background-color: #b7efff;
+  border-radius: 20px;
+}
+.wrapper .outer-box {
+  position: absolute;
+  background-color: #ffdf00;
+  height: 50px;
+  width: 300px;
+}
+.wrapper .outer-box#top {
+  top: 30px;
+}
+.wrapper .outer-box#bottom {
+  left: 100px;
+  background-color: red;
+}
+
 .tapsameter {
   height: 300px;
   width: 50px;
