--- a/tapsaff_style.scss
+++ b/tapsaff_style.scss
@@ -1,3 +1,46 @@
+* {
+    box-sizing: border-box;
+  }
+
+
+
+.wrapper{
+    position: relative;
+    height: 100vh;
+    width: 100%;
+    background: rgb(2,0,36);
+    background: linear-gradient(344deg, rgba(2,0,36,0) 0%, rgba(0,144,255,1) 38%, rgba(0,144,255,1) 100%);
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    .content-box{
+        height: 500px;
+        width: 500px;
+        background-color: rgb(183,239,255);
+        border-radius: 20px;
+    }
+
+    .outer-box{
+        position: absolute;
+        background-color: rgb(255,223,0);
+        height: 50px;
+        width: 300px;
+
+        &#top{
+            top: 30px;
+        }
+        &#bottom{
+            left: 100px;
+            background-color: red;
+        }
+    }
+}
+
+
+
+
 .tapsameter{
     height: 300px; 
     width: 50px;
