--- a/tapsaff_style.scss
+++ b/tapsaff_style.scss
@@ -1,3 +1,7 @@
+$yellow: rgb(255,223,0);
+$blue: rgba(0,144,255,1);
+$light-blue: rgb(183,239,255);
+
 * {
     box-sizing: border-box;
   }
@@ -5,35 +9,61 @@
 
 
 .wrapper{
-    position: relative;
     height: 100vh;
     width: 100%;
-    background: rgb(2,0,36);
-    background: linear-gradient(344deg, rgba(2,0,36,0) 0%, rgba(0,144,255,1) 38%, rgba(0,144,255,1) 100%);
+    background: linear-gradient(344deg, rgba(2,0,36,0) 0%, $blue 38%, $blue 100%);
 
     display: flex;
     justify-content: center;
     align-items: center;
 
     .content-box{
+        position: relative;
+
+        display: grid;
+        grid-template-rows: 1fr 2fr;
+        grid-template-columns: 2fr 1fr;
+
         height: 500px;
         width: 500px;
-        background-color: rgb(183,239,255);
+        background-color: $light-blue;
         border-radius: 20px;
+
+        .content-item{
+            display: flex;
+            align-items: center;
+            justify-content: center;
+
+            &.item--1{
+
+            }
+            &.item--2{
+
+            }
+            &.item--3{
+
+            }
+            &.item--4{
+                
+            }
+        }
     }
 
     .outer-box{
         position: absolute;
-        background-color: rgb(255,223,0);
+        background-color: $yellow;
         height: 50px;
         width: 300px;
+        border-radius: 10px;
 
         &#top{
-            top: 30px;
+            right: -40px;
+            top: -25px;
         }
         &#bottom{
-            left: 100px;
-            background-color: red;
+            left: -40px;
+            bottom: -25px;
+            background-color: $yellow
         }
     }
 }
@@ -42,7 +72,7 @@
 
 
 .tapsameter{
-    height: 300px; 
+    height: 250px; 
     width: 50px;
     background-color: blue;
     
