--- a/tapsaff_style.css
+++ b/tapsaff_style.css
@@ -1,7 +1,11 @@
-@import url("https://fonts.googleapis.com/css2?family=Roboto&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap");
 * {
   box-sizing: border-box;
-  font-family: "Roboto", sans-serif;
+}
+
+body {
+  margin: 0;
+  font-family: "Bebas Neue", cursive;
   font-size: 25px;
   font-weight: bold;
   text-align: center;
@@ -18,17 +22,20 @@
 .wrapper .content-box {
   position: relative;
   display: grid;
-  grid-template-rows: 1fr 2fr;
+  grid-template-rows: 1fr 3fr;
   grid-template-columns: 2fr 1fr;
-  height: 500px;
-  width: 500px;
+  height: 470px;
+  width: 470px;
   background-color: #b7efff;
   border-radius: 20px;
+  margin: 45px;
+  box-shadow: 0px 0px 20px #007c9e;
 }
 .wrapper .content-box .content-item {
   display: flex;
   align-items: center;
   justify-content: center;
+  font-size: 1.7em;
 }
 .wrapper .content-box .content-item.item--1 {
   display: flex;
@@ -38,33 +45,47 @@
 .wrapper .content-box .content-item.item--1 .weatherIcon {
   transform: translateY(4px);
 }
+.wrapper .content-box .content-item.item--4 .tapsameter {
+  height: 280px;
+  width: 65px;
+  background-color: #0090ff;
+  box-shadow: 0px 0px 10px #007c9e;
+  border-radius: 15px 15px 0px 0px;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-end;
+}
+.wrapper .content-box .content-item.item--4 .tapsameter .taps_rating {
+  height: 0%;
+  background-color: #ffdf00;
+  transition: height 0.7s ease-out;
+  border: 2.5px solid black;
+  outline: 2.5px solid black;
+  border-radius: 0 0 3px 3px;
+  position: relative;
+}
+.wrapper .content-box .content-item.item--4 .tapsameter .taps_rating .meter-shirt {
+  position: absolute;
+  top: -23px;
+  left: -7px;
+}
 .wrapper .outer-box {
   position: absolute;
   background-color: #ffdf00;
   height: 50px;
   width: 300px;
   border-radius: 10px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 .wrapper .outer-box#top {
   right: -40px;
   top: -25px;
+  box-shadow: -2px 2px 10px #007c9e;
 }
 .wrapper .outer-box#bottom {
   left: -40px;
   bottom: -25px;
-  background-color: #ffdf00;
-}
-
-.tapsameter {
-  height: 250px;
-  width: 50px;
-  background-color: blue;
-  display: flex;
-  flex-direction: column;
-  justify-content: flex-end;
-}
-.tapsameter .taps_rating {
-  height: 0%;
-  background-color: yellow;
-  transition: height 0.7s ease-out;
+  box-shadow: 2px -2px 10px #007c9e;
 }/*# sourceMappingURL=tapsaff_style.css.map */
