--- a/tapsaff_style.scss
+++ b/tapsaff_style.scss
@@ -1,12 +1,18 @@
-@import url("https://fonts.googleapis.com/css2?family=Roboto&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap');
 
 $yellow: rgb(255,223,0);
 $blue: rgba(0,144,255,1);
 $light-blue: rgb(183,239,255);
+$dark-blue:  rgb(0, 124, 158);
 
 * {
     box-sizing: border-box;
-    font-family: "Roboto", sans-serif;
+    
+  }
+
+  body {
+    margin: 0;
+    font-family: 'Bebas Neue', cursive;
     font-size: 25px;
     font-weight: bold;
     text-align: center;
@@ -25,18 +31,25 @@ $light-blue: rgb(183,239,255);
         position: relative;
 
         display: grid;
-        grid-template-rows: 1fr 2fr;
+        grid-template-rows: 1fr 3fr;
         grid-template-columns: 2fr 1fr;
 
-        height: 500px;
-        width: 500px;
+        height: 470px;
+        width: 470px;
         background-color: $light-blue;
         border-radius: 20px;
+        margin: 45px;
+
+        box-shadow: 0px 0px 20px $dark-blue;
+        
+
 
         .content-item{
             display: flex;
             align-items: center;
             justify-content: center;
+            font-size: 1.7em;
+
 
             &.item--1{
                 display: flex;
@@ -54,7 +67,33 @@ $light-blue: rgb(183,239,255);
 
             }
             &.item--4{
-                
+                .tapsameter{
+                    height: 280px; 
+                    width: 65px;
+                    background-color: $blue;
+                    box-shadow: 0px 0px 10px $dark-blue;
+                    border-radius: 15px 15px 0px 0px;
+                    
+                    display: flex;
+                    flex-direction: column;
+                    justify-content: flex-end;
+                    
+                    .taps_rating{
+                      height: 0%;
+                      background-color: $yellow;
+                      transition: height 0.7s ease-out;
+                      border: 2.5px solid black;
+                      outline: 2.5px solid black;
+                      border-radius: 0 0 3px 3px;
+                      position: relative;
+
+                      .meter-shirt{
+                        position: absolute;
+                        top: -23px;
+                        left: -7px;
+                      }
+                    }
+                  }
             }
         }
     }
@@ -66,14 +105,19 @@ $light-blue: rgb(183,239,255);
         width: 300px;
         border-radius: 10px;
 
+        display: flex;
+        align-items: center;
+        justify-content: center;
+
         &#top{
             right: -40px;
             top: -25px;
+            box-shadow: -2px 2px 10px $dark-blue;
         }
         &#bottom{
             left: -40px;
             bottom: -25px;
-            background-color: $yellow
+            box-shadow: 2px -2px 10px $dark-blue;
         }
     }
 }
@@ -81,18 +125,3 @@ $light-blue: rgb(183,239,255);
 
 
 
-.tapsameter{
-    height: 250px; 
-    width: 50px;
-    background-color: blue;
-    
-    display: flex;
-    flex-direction: column;
-    justify-content: flex-end;
-    
-    .taps_rating{
-      height: 0%;
-      background-color: yellow;
-      transition: height 0.7s ease-out;
-    }
-  }
